@@ -1,3 +1,9 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/magellan.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
